* Allow setting the class list height in the New Game menu.
* Display a list of completed quests in the Quests log.
* Item icons can now have an overlay image based on their quality.
* Added widget settings for modifying the appearance of the quantity text on item icons.
* Added support for playing a sound effect and showing a message when player lacks required MP for power usage.

Engine fixes:

* Fixed GetText bug where fuzzy state from header wasn't being unset properly.
* Fixed rendering bug in WidgetTabControl.
* Fixed crashes when using an empty WidgetListBox.
* Fixed GetText bug where strings weren't being sanitized.
* Fix locked left/right keys when loading a cutscene from the dev console.
* Using the --mods command line flag doesn't overwrite the user's mod configuration.
* Fix infinte loop bug when trying to render multi-line text in a small area.
* Fix interaction with loot hitboxes interfering with loot tooltips.
* Improved handling of mouse movement for melee characters. The player will no longer execute their primary melee attack if they are out of melee range of their target. Also, the player will begin to attack if they enter melee range while moving.
* The user keybindings are now reset if the keybindings file is not forwards compatible. Anyone using remapped keys will need to set them again with this update.
* Improved performance when dealing with campaign statuses.
* Fix NPCs/enemies not begin affected by statuses set in on_load events until the player re-entered the map.
* Various fixes to MenuPowers, including better handling of when powers no longer meet their requirements.
* Lots of code cleanup.

New translations:

* Bulgarian (bg) by Emil
* Brazilian Portuguese (pt_BR) by Gabriel Iasi, Vicente Monteiro
* Vietnamese (vi) by Nguyễn Gia Phong

Translation updates:

* Belarussian (be) update (Mikalai Valer'evich Sakalouski, Zmicer Turok)
* Czech (cs) update (hark34)
* German (de) update (Wuzzy2)
* Spanish (es) update (Diego J. Romero López)