@@ -18,6 +18,7 @@ Engine features:
 * Item icons can now have an overlay image based on their quality.
 * Added widget settings for modifying the appearance of the quantity text on item icons.
 * Added support for playing a sound effect and showing a message when player lacks required MP for power usage.
+* Added ability to grant bonuses to power levels via items with the "bonus_power_level" property.
 
 Engine fixes:
 
